1. added a min-width and min-height to productItem to ensure they always cover grid box they are in 2. removed grid-template-row to fix row gap issue when less item on screen and also added clamp for grid-column for more fluidity

--- a/src/style/ProductShowcase.module.css
+++ b/src/style/ProductShowcase.module.css
@@ -25,8 +25,8 @@
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(clamp(250px,20vw,500px),1fr));
+    grid-template-rows: auto;
     gap: 18px;
 }
 
@@ -35,6 +35,8 @@
 }
 
 .productItem {
+    min-width: 100%;
+    min-height: 100%;
     position: relative;
     background-color: var(--color-gray);
     border-radius: var(--border-radius);
